# zinhart

./: .gitmodules  CMakeLists.txt  README.md  build  build.sh  encoded-iris-data-set-ascii  zinhart.py
binary_parser/: binary_parser  byte_packer  makefile
binary_parser/inc/: binary_parser.h  byte_packer.h
binary_parser/src/: gtestmain.cpp
include/zinhart/: .binary_parser.hh.swp  binary_parser.h  binary_parser.hh  byte_packer.h  byte_packer.hh  zinhart.hh
include/zinhart/bmp_parser/: bmp_parser.hh
src/: CMakeLists.txt
test/: CMakeLists.txt  binary_parser_test.cc
unit_tests/: CMakeLists.txt  bmp_parser_test.cc
vector_space/: config  declarations  iterator  makefile  nested_ilist  sequence_container  steady_timer  utility  vector_space  zinhart_traits
vector_space/inc/: config.h  declarations.h  iterator.h  nested_ilist.h  sequence_container.h  steady_timer.h  testallocator.h  utility.h  vector_space.h  vector_space_test.h  zinhart_traits.h
vector_space/src/: function_implementation.tpp  gtestmain.cpp  iterator.tpp  oldmain.tcpp  sequence_container.tpp  steady_timer.tpp  vector_space_r0.tpp  vector_space_r1.tpp  vector_space_rn.tpp
